--- a/platformio.ini
+++ b/platformio.ini
@@ -1,14 +1,42 @@
-; PlatformIO Project Configuration File
-;
-;   Build options: build flags, source filter
-;   Upload options: custom upload port, speed and extra flags
-;   Library options: dependencies, extra library storages
-;   Advanced options: extra scripting
-;
-; Please visit documentation for the other options and examples
-; https://docs.platformio.org/page/projectconf.html
-
 [env:esp32-c6-devkitc-1]
-platform = espressif32
+; Best support for C6 (better than official)
+platform = https://github.com/pioarduino/platform-espressif32/releases/download/53.03.11/platform-espressif32.zip
 board = esp32-c6-devkitc-1
 framework = arduino
+
+; Partitions file - we have to define zb_storage partition for proper work
+board_build.partitions = partitions.csv
+
+monitor_speed = 115200
+upload_speed = 921600
+upload_protocol = esptool
+
+; For ESP32-C6 with native USB (JTAG/Serial) - set to 0 to prevent reset of board or block when you open a monitor
+monitor_dtr = 0
+monitor_rts = 0
+
+; Deep scan of dependencies - compiler should find all Zigbee files easier
+lib_ldf_mode = deep+
+
+build_flags = 
+    ; Native USB as default serial port - without this you won't see logs
+    -D ARDUINO_USB_MODE=1
+    ; CDC on - PC will see COM just after start
+    -D ARDUINO_USB_CDC_ON_BOOT=1
+
+    ; We define our ESP as a Zigbee coordinator
+    -D ZIGBEE_MODE_ZC
+    
+    ; System library paths (Arduino Core v3.0+)
+    ; Well I had to change environment variables because on Windows paths to libs were too long 
+    ; And I had to point at some libs because compiler didn't see them
+    -I "${platformio.packages_dir}/framework-arduinoespressif32/libraries/Network/src"
+    -L "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32c6/lib"
+    -L "${platformio.packages_dir}/framework-arduinoespressif32-libs/esp32c6/flags"
+    
+    ; Linking API Zigbee for Coordinator and Router version
+    -l esp_zb_api_zczr
+    ; Linking main stack of the protocol
+    -l zboss_stack.zczr
+    ; Linking adaption layer
+    -l zboss_port
