Add WiFi and Zigbee coexistence support

--- a/platformio.ini
+++ b/platformio.ini
@@ -40,3 +40,22 @@ build_flags =
     -l zboss_stack.zczr
     ; Linking adaption layer
     -l zboss_port
+
+    ; Coexistence flags
+    -D CONFIG_ESP32_WIFI_SW_COEXIST_ENABLE=y
+    -D CONFIG_IEEE802154_COEXIST_ENABLE=y
+    -D CONFIG_ZB_ENABLED=1
+    
+    ; Help with WiFi priority managment
+    -D CONFIG_ESP_WIFI_SOFTAP_SAE_SUPPORT=y
+    -D SOC_IEEE802154_SUPPORTED=1
+
+    ; WiFi over Zigbee when they colide
+    -D CONFIG_ESP_COEX_SW_P_WIFI_PRIORITY=y
+    
+    ; Increase buffers for WiFI to prevet packet loss
+    -D CONFIG_ESP_WIFI_DYNAMIC_TX_BUFFER=y
+    -D CONFIG_ESP_WIFI_TX_BUFFER_TYPE=1
+    -D CONFIG_ESP_WIFI_DYNAMIC_RX_BUFFER_NUM=16
+    -D CONFIG_ESP_SYSTEM_EVENT_TASK_STACK_SIZE=4096
+    
